--- a/note/react/src/pages/index.less
+++ b/note/react/src/pages/index.less
@@ -5,3 +5,15 @@
 .title {
   background: rgb(121, 242, 157);
 }
+
+.box {
+    width: 100%;
+    height: 100vh;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+}
