react-beautiful-dnd

--- a/note/react/src/pages/index.less
+++ b/note/react/src/pages/index.less
@@ -1,19 +1,4 @@
 
-.normal {
-}
-
-.title {
-  background: rgb(121, 242, 157);
-}
-
-.box {
+.content {
     width: 100%;
-    height: 100vh;
-}
-
-.item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
 }
